[gd_scene load_steps=3 format=3 uid="uid://bflyb0feirakd"]

[ext_resource type="Script" path="res://exit_area.gd" id="1_hm2ft"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5fw5q"]
size = Vector2(50, 40)

[node name="ExitArea" type="Area2D"]
collision_mask = 2
script = ExtResource("1_hm2ft")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -25.0
offset_top = -40.0
offset_right = 25.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_5fw5q")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="exit_condition" from="." to="." method="_on_exit_condition"]
